removed console logs