@@ -19,19 +19,20 @@ import org.semanticweb.owlapi.model.OWLOntology;
 
 public class Normalizer 
 {
-	public Normalizer(OWLOntology ontology, OWLDataFactory dataFactory, Set<GCI> expressions)
+	public Normalizer(OWLOntology ontology, Set<GCI> expressions)
 	{
 		this.ontology = ontology;
 		this.phaseOneExpressions = new LinkedList<GCI>(expressions);
 		this.phaseTwoExpressions = new LinkedList<GCI>();
 		normalizedExpressions = new HashSet<GCI>();
-		this.dataFactory = dataFactory;
+		this.dataFactory = ontology.getOWLOntologyManager().getOWLDataFactory();
 		this.IOR = ontology.getOntologyID().getOntologyIRI().get();
 	}
 	
 	public void execute()
 	{
 		PhaseOne();
+		PhaseTwo();
 	}
 	
 	public Set<GCI> getNormalizedExpressions()
@@ -56,17 +57,14 @@ public class Normalizer
 	
 	private void PhaseOne()
 	{
-		System.out.println("Phase One algorithm------------------");
 		while(!phaseOneExpressions.isEmpty())
 		{
 			GCI current_gci = phaseOneExpressions.element();
-			System.out.println("Current formula: " + current_gci);
 			phaseOneExpressions.remove();
 			OWLClassExpression lhs = current_gci.getSubClass();
 			OWLClassExpression rhs = current_gci.getSuperClass();
 			if((lhs.isTopEntity() || lhs.isOWLClass() || lhs.isIndividual()) && !lhs.isBottomEntity())
 			{
-				System.out.println("First if");
 				//L'operatore a destra è bottom o classe o individuo
 				//qindi è in forma normale
 				if(rhs.isBottomEntity() || rhs.isOWLClass() || rhs.isIndividual() ||  rhs.isTopEntity())
@@ -90,7 +88,7 @@ public class Normalizer
 			//l'operatore a sinistra è il bottom
 			else if(lhs.isBottomEntity())
 			{
-				System.out.println("Second if");
+				
 			}
 			//l'operatore a sinistra è una congiunzione
 			else if(lhs.getClassExpressionType() == ClassExpressionType.OBJECT_INTERSECTION_OF)
@@ -100,20 +98,13 @@ public class Normalizer
                 ArrayList<OWLClassExpression> operands = new ArrayList<OWLClassExpression>(intersection.getOperands());
                 //se lhs ha 2 operandi in BC e rhs è in BC è in forma normale
                 if(operands.size() == 2 && Utilities.isInBC(operands.get(0)) && Utilities.isInBC(operands.get(1)) && Utilities.isInBC(rhs))
-                {
-                	System.out.println("It's in normal form");
                 	normalizedExpressions.add(current_gci);
-                }
                 //se lhs ha 2 operandi in BC e rhs non è in BC passa alla fase 2
                 else if(operands.size() == 2 && Utilities.isInBC(operands.get(0)) && Utilities.isInBC(operands.get(1)) && !Utilities.isInBC(rhs))
-                {
-                	System.out.println("Simplified but we need the phase 2");
                 	phaseTwoExpressions.add(current_gci);
-                }
                 //se ci sono più di 2 operatori applica NF2
                 else if(operands.size() >= 2)
                 {
-                	System.out.println("Some operands are not in DC");
                 	OWLClassExpression operandToInclude = getOperandInBCFromConjunction(operands);
                 	//se operandToInclude != null allora almeno 1 operando è in BC
                 	if(operandToInclude != null)
@@ -140,15 +131,11 @@ public class Normalizer
                 }
                 //nessuna regola da applicare, passa alla fase 2
                 else
-                {
-                	System.out.println("No rule to apply, phase 2");
                 	phaseTwoExpressions.add(current_gci);
-                }
 			}
 			//l'operatore a sinistra è un esistenziale
 			else if(lhs.getClassExpressionType() == ClassExpressionType.OBJECT_SOME_VALUES_FROM)
 			{
-				System.out.println("Fourth if");
 				OWLObjectSomeValuesFrom someValuesFrom = (OWLObjectSomeValuesFrom) lhs;
 				OWLClassExpression filler = someValuesFrom.getFiller();
 				//Se l'espressione è in forma normale
@@ -175,13 +162,14 @@ public class Normalizer
 	{
 		while(!phaseTwoExpressions.isEmpty())
 		{
-			GCI current_gci = phaseOneExpressions.element();
+			GCI current_gci = phaseTwoExpressions.element();
 			phaseTwoExpressions.remove();
 			OWLClassExpression lhs = current_gci.getSubClass();
 			OWLClassExpression rhs = current_gci.getSuperClass();
 			//se lhs e rhs non sono in BC applica NF5
 			if(!Utilities.isInBC(lhs) && !Utilities.isInBC(rhs))
 			{
+				System.out.println("First if");
 				String uniqueID = UUID.randomUUID().toString();
             	OWLClass newName = dataFactory.getOWLClass(IOR + "#newName" + uniqueID);
             	phaseTwoExpressions.add(new GCI(lhs, newName));
@@ -208,14 +196,31 @@ public class Normalizer
                 	phaseTwoExpressions.add(new GCI(newName, filler));
 				}
 			}
+			//se in rhs c'è un'intersezione applica NF7
 			else if(rhs.getClassExpressionType() == ClassExpressionType.OBJECT_INTERSECTION_OF)
 			{
 				OWLObjectIntersectionOf intersection = (OWLObjectIntersectionOf) rhs;
                 ArrayList<OWLClassExpression> operands = new ArrayList<OWLClassExpression>(intersection.getOperands());
-                OWLClassExpression leftOperand = operands.get(0);
-                OWLClassExpression rightOperand = operands.get(1);
-            	phaseTwoExpressions.add(new GCI(lhs, leftOperand));
-            	phaseTwoExpressions.add(new GCI(lhs, rightOperand));
+                OWLClassExpression superClassOperand = getOperandInBCFromConjunction(operands);
+                //controllo se esiste almeno 1 operatore in BC
+                if(superClassOperand != null)
+                	operands.remove(superClassOperand);
+                //altrimenti ci sono solo operatori esistenziali
+                else
+                {
+                	superClassOperand = operands.getFirst();
+                	operands.removeFirst();
+                }
+                phaseTwoExpressions.add(new GCI(lhs, superClassOperand));
+                //se sono rimasti più di 1 operatore crea l'intersezione
+                if(operands.size() > 1)
+                {
+                	OWLObjectIntersectionOf newIntersection = dataFactory.getOWLObjectIntersectionOf(operands);
+                	phaseTwoExpressions.add(new GCI(lhs, newIntersection));
+                }
+                //altrimenti crea direttamenti l'inclusione
+                else
+                	phaseTwoExpressions.add(new GCI(lhs, operands.getFirst()));
 			}
 			else
 			{
@@ -258,14 +263,6 @@ public class Normalizer
 				return operand;			
 		}
 		return null;
-	}
-	
-	private boolean isThereSomeBCOperandInConjunction(ArrayList<OWLClassExpression> operands)
-	{
-		for(OWLClassExpression operand : operands)
-			if(Utilities.isInBC(operand))
-				return true;
-		return false;
 	}
 	
 	private OWLOntology ontology;
